--- a/index.html
+++ b/index.html
@@ -1,7 +1,90 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
 
-<p>YO</p>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+  <title>Starter Template - Materialize</title>
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+</head>
+
+<body>
+  <main>
+    <div class="section no-pad-bot" id="index-banner">
+      <div class="container">
+        <br>
+        <br>
+        <h1 class="header center green-text">Itinerary.</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">Automated Itinerary generator for hassle free travel planning.</h5>
+        </div>
+        <br>
+      </div>
+    </div>
+    <div class="container">
+      <div class="section">
+        <!--   Icon Section   -->
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center blue-text"><i class="material-icons">navigation</i></h2>
+              <h5 class="center">Destination</h5>
+              <p class="light">Find your ideal travel destination</p>
+              <div class="input-field">
+                <i class="material-icons prefix" style="font-size: 3rem;">my_location</i>
+                <input id="destination" type="text" class="validate">
+                <label for="budget">City</label>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center blue-text"><i class="material-icons">group</i></h2>
+              <h5 class="center">Budget</h5>
+              <p class="light">How much greens you got?</p>
+              <div class="input-field">
+                <input id="budget" type="number" class="validate">
+                <label for="budget">Max Budget</label>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <h2 class="center blue-text"><i class="material-icons">today</i></h2>
+              <h5 class="center">Dates</h5>
+              <p class="light">The ideal travel dates.</p>
+              <div class="input-field">
+                <input id="begin-date" type="date" class="datepicker">
+                <label for="begin-date">Begin Date</label>
+              </div>
+              <div class="input-field">
+                <input id="end-date" type="date" class="datepicker">
+                <label for="begin-date">End Date</label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row center">
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Calculate!</a>
+      </div>
+    </div>
+  </main>
+  <footer class="page-footer green">
+    <div class="footer-copyright">
+      <div class="container">
+        Made by <a class="green-text text-lighten-3" href="http://groups.northwestern.edu/japanclub/">JClub Squad</a>
+      </div>
+    </div>
+  </footer>
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
 </body>
+
 </html>
