tried adding text search

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
       </div>
       <br>
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Calculate!</a>
+        <a href="#" id="calculate-button" class="btn-large waves-effect waves-light green">Calculate!</a>
+      </div>
+      <div id="map"></div>
+      <div class="results">
       </div>
     </div>
   </main>
@@ -83,6 +86,8 @@
   </footer>
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDX3R9405lgR787WXivYY23p3ao61VEAWk&libraries=places"></script>
+  <script src="js/text-search.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 </body>
