--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDX3R9405lgR787WXivYY23p3ao61VEAWk&libraries=places"></script>
-  <script src="js/text-search.js"></script>
+  <script src="js/attractions.js"></script>
+  <script src="js/hotels.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 </body>
