--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
         <br>
       </div>
     </div>
-    <div class="container">
+    <div class="container" id="choices">
       <div class="section">
         <!--   Icon Section   -->
         <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
-              <h2 class="center blue-text"><i class="material-icons">navigation</i></h2>
-              <h5 class="center">Destination</h5>
-              <p class="light">Find your ideal travel destination</p>
+              <h2 class="center blue-text" id="block-icon">
+              <i class="material-icons">navigation</i>
+              </h2>
+              <h5 class="center" id="block-title">Destination</h5>
+              <p class="light" id="block-description">Find your ideal travel destination</p>
               <div class="input-field">
                 <i class="material-icons prefix" style="font-size: 3rem;">my_location</i>
                 <input id="destination" type="text" class="validate">
@@ -42,9 +44,11 @@
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
-              <h2 class="center blue-text"><i class="material-icons">group</i></h2>
-              <h5 class="center">Budget</h5>
-              <p class="light">How much greens you got?</p>
+              <h2 class="center blue-text" id="block-icon">
+              <i class="material-icons">group</i>
+              </h2>
+              <h5 class="center" id="block-title">Budget</h5>
+              <p class="light" id="block-description">How much greens you got?</p>
               <div class="input-field">
                 <input id="budget" type="number" class="validate">
                 <label for="budget">Max Budget</label>
@@ -53,9 +57,11 @@
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
-              <h2 class="center blue-text"><i class="material-icons">today</i></h2>
-              <h5 class="center">Dates</h5>
-              <p class="light">The ideal travel dates.</p>
+              <h2 class="center blue-text" id="block-icon">
+              <i class="material-icons">today</i>
+              </h2>
+              <h5 class="center" id="block-title">Dates</h5>
+              <p class="light" id="block-description">The ideal travel dates.</p>
               <div class="input-field">
                 <input id="begin-date" type="date" class="datepicker">
                 <label for="begin-date">Begin Date</label>
@@ -73,8 +79,8 @@
         <a id="calculate-button" class="btn-large waves-effect waves-light green" onclick="loadAttractions()">Calculate!</a>
       </div>
       <div id="map"></div>
-      <div class="results">
-      </div>
+    </div>
+    <div class="results container">
     </div>
   </main>
   <footer class="page-footer green">
@@ -91,6 +97,7 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/extract.js"></script>
+  <script src="js/transition.js"></script>
 </body>
 
 </html>
