Logic for Itinerary planning done
Fuck yeah.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/extract.js"></script>
+  <script src="js/Itinerary.js"></script>
   <script src="js/attractions.js"></script>
   <script src="js/hotels.js"></script>
 
