--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <br>
         <br>
-        <h1 class="header center green-text">Itinerary.</h1>
+        <div class="header center green-text"><img src='img/itinerary.png'></div>
         <div class="row center">
           <h5 class="header col s12 light">Automated Itinerary generator for hassle free travel planning.</h5>
         </div>
@@ -76,7 +76,7 @@
       </div>
       <br>
       <div class="row center">
-        <a id="calculate-button" class="btn-large waves-effect waves-light green" onclick="loadAttractions()">Calculate!</a>
+        <input type="image" src="img/CatButton.png" id="calculate-button" onclick="loadAttractions()">
       </div>
       <div id="map"></div>
     </div>
@@ -97,14 +97,10 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/extract.js"></script>
-<<<<<<< HEAD
   <script src="js/Itinerary.js"></script>
   <script src="js/attractions.js"></script>
   <script src="js/hotels.js"></script>
-
-=======
   <script src="js/transition.js"></script>
->>>>>>> origin/master
 </body>
 
 </html>
