Added hotel choice
Hotel choice and itinerary scheduling is done in attractions.js.
Itinerary.js contains a function which calls both of those functions. Do
all of your dynamic access to those schedules in the callback functions
in attractions.js.

--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
         <br>
       </div>
     </div>
-    <div class="container" id="choices">
+    <div class="container">
       <div class="section">
         <!--   Icon Section   -->
         <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
-              <h2 class="center blue-text" id="block-icon">
-              <i class="material-icons">navigation</i>
-              </h2>
-              <h5 class="center" id="block-title">Destination</h5>
-              <p class="light" id="block-description">Find your ideal travel destination</p>
+              <h2 class="center blue-text"><i class="material-icons">navigation</i></h2>
+              <h5 class="center">Destination</h5>
+              <p class="light">Find your ideal travel destination</p>
               <div class="input-field">
                 <i class="material-icons prefix" style="font-size: 3rem;">my_location</i>
                 <input id="destination" type="text" class="validate">
@@ -44,11 +42,9 @@
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
-              <h2 class="center blue-text" id="block-icon">
-              <i class="material-icons">group</i>
-              </h2>
-              <h5 class="center" id="block-title">Budget</h5>
-              <p class="light" id="block-description">How much greens you got?</p>
+              <h2 class="center blue-text"><i class="material-icons">group</i></h2>
+              <h5 class="center">Budget</h5>
+              <p class="light">How much greens you got?</p>
               <div class="input-field">
                 <input id="budget" type="number" class="validate">
                 <label for="budget">Max Budget</label>
@@ -57,11 +53,9 @@
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
-              <h2 class="center blue-text" id="block-icon">
-              <i class="material-icons">today</i>
-              </h2>
-              <h5 class="center" id="block-title">Dates</h5>
-              <p class="light" id="block-description">The ideal travel dates.</p>
+              <h2 class="center blue-text"><i class="material-icons">today</i></h2>
+              <h5 class="center">Dates</h5>
+              <p class="light">The ideal travel dates.</p>
               <div class="input-field">
                 <input id="begin-date" type="date" class="datepicker">
                 <label for="begin-date">Begin Date</label>
@@ -76,11 +70,11 @@
       </div>
       <br>
       <div class="row center">
-        <a id="calculate-button" class="btn-large waves-effect waves-light green" onclick="loadAttractions()">Calculate!</a>
+        <a id="calculate-button" class="btn-large waves-effect waves-light green" onclick="makeItinerary()">Calculate!</a>
       </div>
       <div id="map"></div>
-    </div>
-    <div class="results container">
+      <div class="results">
+      </div>
     </div>
   </main>
   <footer class="page-footer green">
@@ -93,18 +87,13 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDX3R9405lgR787WXivYY23p3ao61VEAWk&libraries=places"></script>
-  <script src="js/attractions.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/extract.js"></script>
-<<<<<<< HEAD
   <script src="js/Itinerary.js"></script>
   <script src="js/attractions.js"></script>
   <script src="js/hotels.js"></script>
 
-=======
-  <script src="js/transition.js"></script>
->>>>>>> origin/master
 </body>
 
 </html>
