--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <br>
         <br>
-        <div class="header center green-text"><img src='img/itinerary.png'></div>
+        <h1 class="header center green-text">Itinerary.</h1>
         <div class="row center">
           <h5 class="header col s12 light">Automated Itinerary generator for hassle free travel planning.</h5>
         </div>
@@ -70,11 +70,7 @@
       </div>
       <br>
       <div class="row center">
-<<<<<<< HEAD
         <a id="calculate-button" class="btn-large waves-effect waves-light green" onclick="makeItinerary()">Calculate!</a>
-=======
-        <input type="image" src="img/CatButton.png" id="calculate-button" onclick="loadAttractions()">
->>>>>>> origin/master
       </div>
       <div id="map"></div>
       <div class="results">
@@ -97,11 +93,7 @@
   <script src="js/Itinerary.js"></script>
   <script src="js/attractions.js"></script>
   <script src="js/hotels.js"></script>
-<<<<<<< HEAD
 
-=======
-  <script src="js/transition.js"></script>
->>>>>>> origin/master
 </body>
 
 </html>
