--- a/index.html
+++ b/index.html
@@ -70,17 +70,15 @@
       </div>
       <br>
       <div class="row center">
-<<<<<<< HEAD
-        <a id="calculate-button" class="btn-large waves-effect waves-light green" onclick="makeItinerary()">Calculate!</a>
-=======
         <input type="image" src="img/CatButton.png" id="calculate-button">
->>>>>>> origin/master
       </div>
       <div id="map"></div>
       <div class="results">
         <div class="hotel">
+          <h4 style="text-align: center">Hotel</h4>
         </div>
         <div class="attractions">
+          <h4 style="text-align: center">Attractions</h4>
         </div>
       </div>
     </div>
@@ -101,11 +99,7 @@
   <script src="js/Itinerary.js"></script>
   <script src="js/attractions.js"></script>
   <script src="js/hotels.js"></script>
-<<<<<<< HEAD
-
-=======
   <script src="js/transition.js"></script>
->>>>>>> origin/master
 </body>
 
 </html>
