--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  
 </head>
 
 <body>
@@ -74,13 +73,17 @@
       <div class="row center">
         <input type="image" src="img/CatButton.png" id="calculate-button">
       </div>
+      <div class="transition">
+      </div>
       <div id="map"></div>
-      <div class="results">
-        <div class="hotel">
-          <h4 style="text-align: center" class="blue-text">Hotel</h4>
-        </div>
-        <div class="attractions">
-          <h4 style="text-align: center" class="green-text">Attractions</h4>
+      <div class="row center container">
+        <div class="results">
+          <div class="hotel col s4">
+            <h4 style="text-align: center" class="blue-text">Hotel</h4>
+          </div>
+          <div class="attractions col s8">
+            <h4 style="text-align: center" class="green-text">Attractions</h4>
+          </div>
         </div>
       </div>
     </div>
